--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FBAA28</color>
     <color name="background">#EBF6FC</color>
+    <color name="text">#4AADE4</color>
 </resources>
