--- a/app/src/main/res/layout/line_length.xml
+++ b/app/src/main/res/layout/line_length.xml
@@ -19,13 +19,13 @@
         tools:layout_editor_absoluteY="0dp">
 
         <TextView
+            android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="Line Lengths"
             android:textColor="@color/colorAccent"
-            android:textSize="25dp"
-            android:layout_gravity="center"
-            android:id="@+id/toolbar_title" />
+            android:textSize="25dp" />
 
     </android.support.v7.widget.Toolbar>
 
