--- a/app/src/main/res/layout/account_settings.xml
+++ b/app/src/main/res/layout/account_settings.xml
@@ -37,8 +37,8 @@
 
     <ImageButton
         android:id="@+id/imageButton3"
-        android:layout_width="41dp"
-        android:layout_height="49dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
         android:background="@color/colorPrimary"
@@ -128,6 +128,7 @@
         android:layout_marginEnd="8dp"
         android:src="@drawable/pencilIcon"
         app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="308dp"
         app:layout_constraintTop_toBottomOf="@+id/textView3"/>
 
     <TextView
