--- a/app/src/main/res/layout/account_settings.xml
+++ b/app/src/main/res/layout/account_settings.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:background="@color/background"
+    >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
-        android:layout_width="421dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
@@ -26,13 +26,13 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="Weekly Menu"
+        android:text="Account Settings"
         android:textColor="@color/colorAccent"
         android:textSize="25dp"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/toolbar2"
         app:layout_constraintTop_toTopOf="@+id/toolbar2" />
 
@@ -48,20 +48,20 @@
         android:tint="@color/colorAccent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/usericon"
-        tools:layout_editor_absoluteX="362dp" />
+        tools:layout_editor_absoluteX="338dp" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="84dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
-        android:text="Account Settings"
         android:textSize="22dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="63dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/usericon"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,6 +85,7 @@
         android:text="Name"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:layout_marginLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,6 +96,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/pencilIcon"
+        android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="@+id/editText"
         tools:layout_editor_absoluteY="233dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"/>
@@ -106,6 +108,7 @@
         android:layout_marginTop="32dp"
         android:text="John Doe"
         android:textSize="16dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +122,7 @@
         android:text="E-Mail"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:layout_marginLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,6 +133,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/pencilIcon"
+        android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="308dp"
         app:layout_constraintTop_toBottomOf="@+id/textView3"/>
@@ -140,6 +145,7 @@
         android:layout_marginTop="40dp"
         android:text="JohnDoe@gmail.com"
         android:textSize="16dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -153,6 +159,7 @@
         android:text="Payment"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:layout_marginLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -162,6 +169,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/pencilIcon"
+        android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -172,6 +180,7 @@
         android:layout_marginTop="8dp"
         android:text="xxxx-xxxx-xxxx-9999"
         android:textSize="16dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
