--- a/app/src/main/res/layout/weekly_menu.xml
+++ b/app/src/main/res/layout/weekly_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,69 +14,64 @@
         android:background="@color/colorPrimary"
 
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:theme="?attr/actionBarTheme">
 
     </android.support.v7.widget.Toolbar>
 
-
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="59dp"
-        android:layout_height="54dp"
-        android:adjustViewBounds="true"
-        android:background="@color/colorPrimary"
-        android:scaleType="fitCenter"
-        android:tint="@color/colorAccent"
-        app:srcCompat="@drawable/usericon"
-        tools:layout_editor_absoluteX="352dp"
-        tools:layout_editor_absoluteY="1dp" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="153dp"
         android:layout_height="34dp"
-
+        android:layout_below="@+id/menuImage"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="300dp"
-        android:entries="@array/weekday"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
+        android:layout_marginTop="-20dp"
+        android:entries="@array/weekday" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="357dp"
-        android:layout_height="220dp"
-        app:srcCompat="@drawable/menu"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="95dp" />
+
 
     <TextView
         android:id="@+id/textViewMenu"
         android:layout_width="323dp"
         android:layout_height="217dp"
         android:layout_marginStart="32dp"
+        android:layout_below="@+id/spinner"
+        android:layout_marginTop="20dp"
         android:text="@string/currentMenu"
-        android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="420dp" />
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="10dp"
         android:text="Weekly Menu"
         android:textColor="@color/colorAccent"
         android:textSize="25dp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
-        app:layout_constraintStart_toStartOf="@+id/toolbar2"
-        tools:layout_editor_absoluteY="16dp" />
+
+        android:visibility="visible" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="63dp"
+        android:layout_height="54dp"
+        android:layout_alignParentRight="true"
+        android:background="@color/colorPrimary"
+        android:scaleType="fitCenter"
+        android:tint="@color/colorAccent"
+        android:layout_marginRight="5dp"
+        app:srcCompat="@drawable/usericon" />
+
+    <ImageView
+        android:id="@+id/menuImage"
+        android:layout_width="344dp"
+        android:layout_height="376dp"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/menu" />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
