--- a/app/src/main/res/layout/account_settings.xml
+++ b/app/src/main/res/layout/account_settings.xml
@@ -95,7 +95,7 @@
         android:layout_width="22dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/pencilIcon"
+        android:src="@drawable/pencilicon"
         android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="@+id/editText"
         tools:layout_editor_absoluteY="233dp"
@@ -132,7 +132,7 @@
         android:layout_width="22dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/pencilIcon"
+        android:src="@drawable/pencilicon"
         android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="308dp"
@@ -168,7 +168,7 @@
         android:layout_width="22dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/pencilIcon"
+        android:src="@drawable/pencilicon"
         android:layout_marginRight="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
