--- a/app/src/main/res/layout/enter_credit_card.xml
+++ b/app/src/main/res/layout/enter_credit_card.xml
@@ -117,5 +117,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/krishnalunchlogosm" />
+        app:srcCompat="@drawable/krishna_logo" />
 </RelativeLayout>
