--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -6,6 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".HomeScreen">
 
+    <include
+        android:id="@+id/include"
+        layout="@layout/content_home_screen" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
