added graph view to line lengths screen

--- a/app/src/main/res/layout/line_length.xml
+++ b/app/src/main/res/layout/line_length.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,72 +7,81 @@
     android:background="@color/background"
     tools:context=".MainActivity">
 
+
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar2"
-        android:layout_width="415dp"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-
-        tools:layout_editor_absoluteX="-1dp"
-        tools:layout_editor_absoluteY="0dp">
-
-        <TextView
-            android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Wait Times"
-            android:textColor="@color/colorAccent"
-            android:textSize="25dp"
-            tools:layout_editor_absoluteX="136dp"
-            tools:layout_editor_absoluteY="11dp" />
+        android:theme="?attr/actionBarTheme">
 
     </android.support.v7.widget.Toolbar>
 
+    <TextView
+        android:id="@+id/toolbar_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="10dp"
+        android:text="Wait Times"
+        android:textColor="@color/colorAccent"
+        android:textSize="25dp"
+
+        android:visibility="visible" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="63dp"
+        android:layout_height="54dp"
+        android:layout_alignParentRight="true"
+        android:background="@color/colorPrimary"
+        android:scaleType="fitCenter"
+        android:tint="@color/colorAccent"
+        android:layout_marginRight="5dp"
+        app:srcCompat="@drawable/usericon" />
+
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/bar_graph"
+        android:layout_marginTop="75dp"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:layout_height="200dip" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="174dp"
         android:layout_height="55dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="32dp"
+        android:layout_below="@+id/bar_graph"
         android:entries="@array/weekday"
         android:spinnerMode="dropdown"
-        android:textColor="#4AADE4"
-        android:textSize="35dp"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="384dp"
 
         />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="411dp"
-        android:layout_height="476dp"
-        app:srcCompat="@drawable/linelength"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+
 
     <TextView
         android:id="@+id/textViewHours"
         android:layout_width="325dp"
+        android:layout_marginStart="32dp"
+        android:layout_below="@+id/spinner"
+        android:layout_marginTop="20dp"
         android:layout_height="180dp"
-        android:text="Hours: 11am - 1:30pm"
-        android:textSize="20dp"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="503dp" />
-
-    <ImageButton
-        android:id="@+id/accountButton"
-        android:layout_width="59dp"
-        android:layout_height="54dp"
-        android:adjustViewBounds="true"
-        android:background="@color/colorPrimary"
-        android:scaleType="fitCenter"
-        android:tint="@color/colorAccent"
-        app:srcCompat="@drawable/usericon"
-        tools:layout_editor_absoluteX="356dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:text="Hours M-F: 11am - 1:30pm"
+        android:textSize="20dp" />
 
 
-</android.support.constraint.ConstraintLayout>
+
+
+
+
+
+
+
+</RelativeLayout>
