--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -11,28 +11,28 @@
         android:id="@+id/KrishnaLogo"
         android:layout_width="match_parent"
         android:layout_height="194dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="125dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         app:srcCompat="@drawable/krishna_logo" />
 
     <TextView
-        android:id="@+id/UsernameTitle"
+        android:id="@+id/EmailTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username"
+        android:text="Email"
         android:textSize="15dp"
         android:layout_below="@id/KrishnaLogo"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"/>
 
     <EditText
-        android:id="@+id/UsernameTxtBox"
+        android:id="@+id/EmailTxtBox"
         android:layout_width="372dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/UsernameTitle"
+        android:layout_below="@id/EmailTitle"
         android:layout_marginLeft="16dp"
-        android:inputType="textPersonName"/>
+        android:inputType="textEmailAddress"/>
 
     <TextView
         android:id="@+id/PasswordTitle"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:text="Password"
         android:textSize="15dp"
-        android:layout_below="@id/UsernameTxtBox"
+        android:layout_below="@id/EmailTxtBox"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="16dp"/>
 
@@ -52,13 +52,21 @@
         android:layout_marginLeft="16dp"
         android:inputType="textPassword"/>
 
+    <ProgressBar
+        android:id="@+id/LogInProgress"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_below="@id/PasswordTxtBox"
+        android:layout_marginTop="16dp"
+        android:visibility="invisible"/>
+
     <Button
         android:id="@+id/LogInBtn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/PasswordTxtBox"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="100dp"
         android:background="#062c40"
         android:textColor="#fff"
         android:text="Log-In" />
